Fixed whitespace on mobile view

--- a/src/pages/contact/index.css
+++ b/src/pages/contact/index.css
@@ -39,9 +39,7 @@
         shadow-md
         m-6
         overflow-hidden
-        sm:w-5/6
-        md:w-96
-        lg:w-96
+        w-96
         justify-end
     }
 
