--- a/src/pages/projects/index.css
+++ b/src/pages/projects/index.css
@@ -6,6 +6,7 @@
     
     .website-config {
         @apply
+        relative
         max-w-7xl
         mx-auto
         px-4
@@ -54,9 +55,7 @@
         shadow-md
         m-6
         overflow-hidden
-        sm:w-5/6
-        md:w-96
-        lg:w-96
+        w-96
     }
 
     .card-title {
@@ -72,7 +71,7 @@
     .card-img {
         @apply
         rounded-lg
-        w-full
+        w-96
         h-64
     }
 
